--- a/RadioRecoder/WPF_Server/RecoderServerApplication/RecoderServerApplication/MainWindow.xaml
+++ b/RadioRecoder/WPF_Server/RecoderServerApplication/RecoderServerApplication/MainWindow.xaml
@@ -56,9 +56,9 @@
             </ListView.View>
         </ListView>
         <Button Name="wificon" Content="Server" HorizontalAlignment="Left" Margin="831,122,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="wificon_Click"/>
-        <TextBox Name="wifi" HorizontalAlignment="Left" Height="23" Margin="706,118,0,0" TextWrapping="Wrap" Text="DevMaster_2G" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="pass" HorizontalAlignment="Left" Height="23" Margin="706,156,0,0" TextWrapping="Wrap" Text="13240265536" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="ip" HorizontalAlignment="Left" Height="23" Margin="706,193,0,0" TextWrapping="Wrap" Text="192.168.100.155" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="wifi" HorizontalAlignment="Left" Height="23" Margin="706,118,0,0" TextWrapping="Wrap" Text="MHelec" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="pass" HorizontalAlignment="Left" Height="23" Margin="706,156,0,0" TextWrapping="Wrap" Text="h8c9n///" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="ip" HorizontalAlignment="Left" Height="23" Margin="706,193,0,0" TextWrapping="Wrap" Text="192.168.31.168" VerticalAlignment="Top" Width="120"/>
         <TextBox Name="port" HorizontalAlignment="Left" Height="23" Margin="706,232,0,0" TextWrapping="Wrap" Text="8880" VerticalAlignment="Top" Width="120"/>
         <Label Content="WiFi:" HorizontalAlignment="Left" Margin="630,116,0,0" VerticalAlignment="Top" Width="71" HorizontalContentAlignment="Right"/>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="630,154,0,0" VerticalAlignment="Top" Width="71" HorizontalContentAlignment="Right"/>
@@ -68,7 +68,7 @@
         <TextBox Name="packge" HorizontalAlignment="Left" Height="23" Margin="497,489,0,0" TextWrapping="Wrap" Text="60" VerticalAlignment="Top" Width="120"/>
         <Button Name="calib" Content="Calibration" HorizontalAlignment="Left" Height="19" Margin="630,271,0,0" VerticalAlignment="Top" Width="75" Click="calib_Click"/>
         <Label Content="Server IP:" HorizontalAlignment="Left" Margin="696,489,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="serverip" HorizontalAlignment="Left" Height="23" Margin="774,489,0,0" TextWrapping="Wrap" Text="192.168.100.155" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="serverip" HorizontalAlignment="Left" Height="23" Margin="774,489,0,0" TextWrapping="Wrap" Text="192.168.31.168" VerticalAlignment="Top" Width="120"/>
         <TextBox Name="bindname" HorizontalAlignment="Left" Height="23" Margin="706,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
 
 
